...
        setupTableView()
        setupSearchBar()
        setupBindings()
    }
    
    fileprivate func setupTableView() {
        tableView.accessibilityIdentifier = "PodcastSearchTable"
        tableView.register(PodcastCell.self)
        tableView.tableFooterView = UIView()
        
        // Set label
        tableView.addSubview(blankListLabel)
        blankListLabel.textAlignment = .center
...
